# podman-remote

./: BUILD.md  Cargo.toml  Dockerfile  Dockerfile.multi-arch  build-cross.sh  build-docker.sh  podman-remote.container
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
calls/: get.http  list.http  start.http
calls/containers/: get.http  list.http  start.http
calls/services/: get.http  list.http  put.http
src/: auth.rs  containers.rs  main.rs  services.rs
