[package]
name = "podman-remote"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.7"
bollard = "0.19.4"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "auth"] }
zbus = "5.12.0"
systemd-zbus = "5.3.2"
